--- a/index.html
+++ b/index.html
@@ -6,10 +6,25 @@
   <title>Hello World</title>
   <link rel="stylesheet" href="style.css">
   <script src="script.js" type="text/javascript"></script>
+
+<!-- Bootstrap CSS -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+
+
 </head>
 
 <body>
-  <h1>Hello World</h1>
+
+  <div class="container-fluid">
+  <h1 class="text-warning">Kyanni gallery</h1>
+  </div>
+
+<div class="container">
+
+<img src="walk to galerie.jpg" class="img-fluid">
+</div>
+
+
 
 
 
