added rows and columns

--- a/index.html
+++ b/index.html
@@ -17,13 +17,47 @@
 
   <div class="container-fluid">
   <h1 class="text-warning">Kyanni gallery</h1>
+  <p lass="lead text-center">
+
+  
+  </p>
   </div>
+  
+  
 
 <div class="container">
-
 <img src="walk to galerie.jpg" class="img-fluid">
 </div>
 
+<div class="container">
+  <h2> Check out our art:</h2>
+  <div class="row">
+    <div class="col border">
+      img src="sky.jpg" class="img-fluid">
+    </div>
+    <div class="col border">2</div>
+  </div>
+  <div class="row">
+    <div class="col border">3</div>
+    <div class="col border">4</div>
+    <div class="col border">5</div>
+  </div>
+  <div class="row">
+    <div class="col border">6</div>
+    <div class="col border">7</div>
+    <div class="col border">8</div>
+    <div class="col border">9</div>
+  </div>
+
+</div>
+
+
+
+
+<div class="container-fluid text-light bg-dark bg-gradient">
+<p class="small text-center"> kyanni Gonzalez 2025</p> 
+
+</div>
 
 
 
