added color to our bootstrap

--- a/index.html
+++ b/index.html
@@ -15,22 +15,25 @@
 
 <body>
 
-  <div class="container-fluid">
+  <div class="container-fluid bg-primary-subtle p-3 mb-2">
   <h1 class="text-warning">Kyanni gallery</h1>
+  <span class="badge text-bg-success"> JUST OPENED!</span>
   <p lass="lead text-center">
-
+<button type="button" class="btn btn-warning"> google maps</button>
   
   </p>
   </div>
   
   
 
-<div class="container">
+<div class="container p-3">
 <img src="walk to galerie.jpg" class="img-fluid">
+
 </div>
 
 <div class="container">
   <h2> Check out our art:</h2>
+  <span class="badge text-bg-danger"> CLICK HERE!</span>
   <div class="row">
     <div class="col border">
       img src="sky.jpg" class="img-fluid">
